Fix bug which description is covered by white background

--- a/member/web/app/css/style.css
+++ b/member/web/app/css/style.css
@@ -855,7 +855,7 @@ header.main-header{
 }
 
 .detail-event .content-event{
-    max-height: 180px;
+    /*max-height: 180px;*/
     overflow: hidden;
     position: relative;
     -webkit-transition: max-height 1s; /* Safari */
